Alteração e novo Ex

--- a/JS/Aula06/ex003.html
+++ b/JS/Aula06/ex003.html
@@ -32,7 +32,7 @@ h1{
 
     var soma = n1 + n2
 
-    window.alert("A soma dos dois números é: " + soma)
+    window.alert(`A soma entre ${n1} e ${n2} é igual a ${soma}.`)
 
 </script>
 </body>
