--- a/JS/Aula14ex/ex016/modelo.html
+++ b/JS/Aula14ex/ex016/modelo.html
@@ -26,7 +26,7 @@
         </div>
 
         <div>
-            <input type="button" value="Contar">
+            <input type="button" value="Contar" id="contar" onclick="contagem()">
         </div>
 
         <div id="resultado">
