--- a/JS/Aula14ex/ex016/modelo.html
+++ b/JS/Aula14ex/ex016/modelo.html
@@ -12,26 +12,20 @@
     </header>
 
     <section>
-        <div>
-            <label for="inicio">Início:</label>
-            <input type="number" name="inicio" id="numinicio">
-        </div>
-        <div>
-            <label for="numfim">Fim:</label>
-            <input type="number" name="fim" id="numfim">
-        </div>
-        <div>
-            <label for="passo">Passo:</label>
-            <input type="number" name="passo" id="numpasso">
-        </div>
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txtinicio"></p>
+            
+            <p>Fim: <input type="number" name="fim" id="txtfim"></p>
 
-        <div>
-            <input type="button" value="Contar" id="contar" onclick="contagem()">
+            <p>Passo: <input type="number" name="passo" id="txtpasso"></p>
+            
+            <p><input type="button" value="Contar" onclick="contagem()"></p>
         </div>
 
         <div id="resultado">
             Preparando a Contagem...
         </div>
+
     </section>
     <footer>
         <p>&copy; Curso em Vídeo</p>
