--- a/JS/Aula14ex/ex017/modelo.html
+++ b/JS/Aula14ex/ex017/modelo.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuado</h1>
     </header>
 
     <section>
         <div>
-            Testando...
+            <p id="dados">
+                Número: <input type="number" name="numero" id="txtnum"> <input type="button" value="Gerar Tabuada" onclick="gerar()">
+            </p>
         </div>
 
-        <div>
-            Olá!
+        <div >
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um Número: </option>
+            </select>
         </div>
     </section>
     <footer>
